# LittleHeavy

./: README.md
backend/: Untitled  config.py  database.db  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  cart.py  checkout.py
backend/app/core/: auth.py  database.py
backend/app/models/: cart.py  user.py
backend/app/schemas/: product.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/cart/: page.tsx
frontend/src/app/checkout/success/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/layout/: CategoryNav.tsx  Header.tsx  HeroCarousel.tsx
frontend/src/components/products/: ProductCard.tsx
